--- a/css/browser.css
+++ b/css/browser.css
@@ -119,9 +119,9 @@ img{
 
 #gamecard{
     width: 250px;
-    position: fixed;
+    position: relative;
     top: 2px;
-    right: 16px;
+    right: 2px;
     float: right;
     z-index: 2;
     margin-top: 54px;
