--- a/css/browser.css
+++ b/css/browser.css
@@ -15,15 +15,15 @@ img{
     color: white;
     opacity: 0.8;
     position: absolute;
-    top: -10px;
-    left: 10px;
+    top: -8px;
+    left: 12px;
     z-index: 2;
 }
 
 .refresh {
     opacity: 0.8;
     position: absolute;
-    top: 8px;
+    top: 10px;
     left: 210px;
     color: white;
     font-weight: 700;
@@ -44,7 +44,7 @@ img{
 	font-weight: bold;
     opacity: 0.8;
     position: absolute;
-    top: 3px;
+    top: 5px;
     left: 350px;
     z-index: 2;
 }
@@ -75,23 +75,19 @@ img{
     background-color: #13233d;
     color: white;
     border: 1px solid #404f70;
-    border-left: 0;
-    border-bottom: 0;
-    padding: 2px;
-    padding-left: 40px;
-    padding-right: 10px;
+    padding: 8px;
     position: absolute;
     left: 588px;
-    z-index: 0;
+    bottom: 6px;
+    z-index: 3;
 }
 
 .dewmenu{
-    left: 565px;
-    top: 1px;
+    left: 45px;
 }
 
 .feeltrain{
-    top: 23px;
+    left: -webkit-calc(100% - 440px);
 }
 
 .browserSwitch:hover{
