--- a/css/browser.css
+++ b/css/browser.css
@@ -147,21 +147,6 @@ img{
     color: gold;
 }
 
-.pmButton{
-    float: right;
-    height: 25px;
-    width: 25px;
-    font-size: 8pt;
-    padding-left: 5px;
-    background: none;
-    border: 1px solid #404f70;
-    color: white;
-}
-
-.pmButton:hover{
-    background-color: #404f70;
-}
-
 .addPartyMember{
     position: relative;
     top: 2px;
@@ -179,6 +164,46 @@ img{
 }
 
 .addPartyMember:hover{
+    background-color: #404f70;
+}
+
+.toggleChat{
+    margin-right: 4px;
+    font-size: 10pt;
+    position: relative;
+    top: 2px;
+    right: 4px;
+    height: 24px;
+    line-height: 18px;
+    padding: 4px;
+    padding-top: 1px;
+    background-color: #13233d;
+    color: white;
+    float: right;
+    border: 1px solid #404f70;
+}
+
+.toggleChat:hover{
+    background-color: #404f70;
+}
+
+.addToParty{
+    position: relative;
+    top: 2px;
+    right: 0px;
+    height: 24px;
+    line-height: 18px;
+    padding: 4px;
+    padding-left: 6px;
+    padding-top: 1px;
+    width: 25px;
+    background-color: #13233d;
+    color: white;
+    float: right;
+    border: 1px solid #404f70;
+}
+
+.addToParty:hover{
     background-color: #404f70;
 }
 
@@ -211,9 +236,9 @@ img{
 }
 
 #party{
-    position: relative;
-    top: 5px;
-    left: 0px;
+    position: absolute;
+    top: 33px;
+    left: 3px;
     width: 294px;
     height: 364px;
     z-index: 100;
@@ -224,6 +249,24 @@ img{
     padding:6px;
     padding-left: 10px;
     padding-right: 4px;
+}
+
+#allOnline{
+    display:none;
+    position: absolute;
+    top: 33px;
+    left: 3px;
+    width: 294px;
+    height: 364px;
+    z-index: 100;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: black;
+    color: white;
+    padding:6px;
+    padding-left: 10px;
+    padding-right: 4px;
+    overflow-y: auto;
 }
 
 /*===============================*/
@@ -237,12 +280,15 @@ img{
     height: 24px;
     line-height: 18px;
     padding: 4px;
+    text-align: center;
+    width: 24px;
+    padding-top: 2px;
     padding-left: 6px;
-    padding-top: 1px;
     background-color: #13233d;
     color: white;
     float: right;
     border: 1px solid #404f70;
+    font-size: 11pt;
 }
 
 .closeChat:hover{
@@ -291,6 +337,7 @@ img{
     padding:6px;
     padding-left: 10px;
     padding-right: 4px;
+    overflow-y: auto;
 }
 
 #messageBox{
