--- a/css/browser.css
+++ b/css/browser.css
@@ -38,6 +38,10 @@ img{
     -webkit-user-drag: none;
 }
 
+button {
+    outline: none;
+}
+
 .browserTitle{
     font-family: 'BlenderPro-Bold';
     color: white;
@@ -140,10 +144,26 @@ img{
 /*==============================*/
 
 .togglePartyList{
+    opacity: 0.8;
+    font-size: 11pt;
+    background-color: #13233d;
+    color: white;
+    border: 2px solid #404f70;
+    padding-top: 3px;
+    padding-bottom: 9px;
     position: absolute;
+    left: 580px;
     top: 10px;
-    left: 650px;
+    padding-left: 50px;
+    padding-right: 20px;
+    z-index: 0;
+    font-family: 'BlenderPro-Book';
 }
+
+.togglePartyList:hover{
+    background-color: #31415b;
+}
+
 
 .friend{
     font-size: 14pt;
