--- a/css/browser.css
+++ b/css/browser.css
@@ -1,41 +1,18 @@
-@font-face {
-    font-family: 'BlenderPro-Book'; 
-    src: url('../fonts/BlenderPro-Book.otf'); 
-}
-
-@font-face {
-    font-family: 'BlenderPro-BookItalic'; 
-    src: url('../fonts/BlenderPro-BookItalic.otf'); 
-}
-
-@font-face {
-    font-family: 'BlenderPro-Medium'; 
-    src: url('../fonts/BlenderPro-Medium.otf'); 
-}
-
-@font-face {
-    font-family: 'BlenderPro-Bold'; 
-    src: url('../fonts/BlenderPro-Bold.otf'); 
-}
-
-@font-face {
-    font-family: 'BlenderPro-Heavy'; 
-    src: url('../fonts/BlenderPro-Heavy.otf'); 
-}
+@font-face{font-family:"Conduit ITC";src:url(../fonts/Conduit-ITC.woff);}
 
 b, strong{
-    font-family: 'BlenderPro-Medium';
+    font-family: "Conduit ITC";
     font-weight: normal;
 }
 
 body {
-	background-color: #05152f;
+	background-color: transparent;
     position: relative;
     width: -webkit-calc(100% - 30px);
     margin-left: auto;
     margin-right: auto;
     overflow-y: hidden;
-    font-family: 'BlenderPro-Book'; 
+    font-family: "Conduit ITC"; 
     letter-spacing: 1px;
 }
 
@@ -45,28 +22,47 @@ img{
 
 button {
     outline: none;
+    font-family: "Conduit ITC"; 
+}
+
+#backgroundFrame {
+    position: absolute;
+    margin: 0;
+    padding: 0;
+    background-color: black;
+    left: -15px;
+    width: -webkit-calc(100% + 30px);
+    height: -webkit-calc(100% - 150px);
+    top: 75px;
+    opacity: 0.8;
+}
+
+#backgroundFrameInsert {
+    background-color: #14234a;
+    height: -webkit-calc(100% - 80px);
+    width: 100%;
+    margin-top: 40px;
 }
 
 .browserTitle{
-    font-family: 'BlenderPro-Bold';
     color: white;
     opacity: 0.8;
     position: absolute;
-    top: -8px;
+    top: 105px;
     left: 12px;
     z-index: 2;
+    font-size: 18pt;
 }
 
 .refresh {
-    font-family: 'BlenderPro-Medium';
     opacity: 0.8;
     position: absolute;
-    top: 10px;
+    top: 130px;
     left: 200px;
     color: white;
     font-size: 12pt;
     background-color: black;
-    width: 115px;
+    width: 95px;
     height: 30px;
     border-style: solid;
     border: 1px solid white;
@@ -79,27 +75,28 @@ button {
 
 .serverStats {
     color: white;
-    font-family: 'BlenderPro-Bold';
     opacity: 0.8;
     position: absolute;
-    top: 5px;
+    top: 108px;
     left: 350px;
     z-index: 2;
+    font-size: 14pt;
 }
 
 .closeButton {
     opacity: 0.8;
     position: absolute;
-    top: 8px;
-    right: 2px;
+    top: 128px;
+    right: -5px;
     color: white;
     font-weight: Medium;
     background-color: black;
-    width: 95px;
+    width: 30px;
     height: 30px;
     border-style: solid;
     border: 1px solid white;
-    display: none;
+    border-radius: 5px;
+    z-index: 4;
 }
 
 .closeButton:hover{
@@ -117,7 +114,6 @@ button {
     left: 588px;
     bottom: 4px;
     z-index: 3;
-    font-family: 'BlenderPro-Book';
 }
 
 .dewmenu{
@@ -173,7 +169,6 @@ z-index: 10;
     padding-left: 50px;
     padding-right: 20px;
     z-index: 0;
-    font-family: 'BlenderPro-Medium';
 }
 
 .togglePartyList:hover{
@@ -263,7 +258,6 @@ z-index: 10;
 }
 
 #partyHeader{
-    font-family: 'BlenderPro-Bold';
     position: relative;
     top: 2px;
     left: 4px;
@@ -315,7 +309,6 @@ z-index: 10;
 
 #statusLine{
     color: grey;
-    font-family: 'BlenderPro-BookItalic';
 }
 
 /*===============================*/
@@ -358,7 +351,6 @@ z-index: 10;
 }
 
 #chatHeader{
-    font-family: 'BlenderPro-Bold';
     position: relative;
     top: 2px;
     left: 4px;
@@ -441,49 +433,48 @@ z-index: 10;
 
 #gamecard{
     opacity: 0.9;
-    width: 250px;
-    position: relative;
-    top: 2px;
+    width: 254px;
+    position: absolute;
+    top: 118px;
     right: 2px;
     float: right;
     z-index: 2;
     margin-top: 54px;
-    margin-right: 10px;
+    margin-right: -10px;
 }
 
 #cardheader{
     position: relative;
     top: 2px;
     left: 2px;
-    width: 246px;
-    min-height: 139px;
-    background-color: #13233d;
+    width: 235px;
+    min-height: 137px;
+    background-color: white;
     -webkit-clip-path: polygon(30px 0, 100% 0, 100% 100%, 100% 100%, 0 100%, 0 30px);
 }
 
 #cardheaderborder{
-    background-color: #404f70;
+    background-color: white;
     width: 250px;
-    min-height: 143px;
+    min-height: 140px;
     -webkit-clip-path: polygon(30px 0, 100% 0, 100% 100%, 100% 100%, 0 100%, 0 30px);
     padding-bottom: 4px;
 }
 
 #title{
-    font-family: 'BlenderPro-Medium';
     position: relative;
     margin-top: 2px;
-    min-height: 30px;
+    min-height: 21px;
     text-align: center;
     padding-left: 10px;
     padding-right: 10px;
     padding-top: 4px;
     padding-bottom: 4px;
     line-height: 20px;
-    width: 246px;
+    width: 226px;
     background-color: black;
     color: white;
-    border-bottom: 2px solid #404f70;
+    border-bottom: 2px solid white;
 }
 
 #mappic{
@@ -499,10 +490,10 @@ z-index: 10;
 
 #scoreboard{
     margin-top: 5px;
-    width: 250px;
+    width: 247px;
     line-height: 30px;
     text-align: center;
-    border: 2px solid #404f70;
+    border: 2px solid white;
     background-color: #13233d;
     color: white; 
 }
@@ -531,17 +522,18 @@ z-index: 10;
 
 #gameinfoborder{
     margin-top: -2px;
-    background-color: #404f70;
+    background-color: white;
     width: 251px;
     padding-bottom: 4px;
     -webkit-clip-path: polygon(0 0, 100% 0, 100% -webkit-calc(100% - 30px), -webkit-calc(100% - 30px) 100%, 0 100%, 0 0);
 }
 
 #gameinfo{
+    font-size: 10pt;
     position: relative;
     top: 2px;
     left: 2px;
-    width: 247px;
+    width: 243px;
     margin-top: 6px;
     padding-left: 4px;
     line-height: 20px;
@@ -551,32 +543,6 @@ z-index: 10;
     word-wrap:break-word;
     -webkit-clip-path: polygon(0 0, 100% 0, 100% -webkit-calc(100% - 30px), -webkit-calc(100% - 30px) 100%, 0 100%, 0 0);
 }
-
-/*=============================*/
-/*======= Outter border =======*/
-/*=============================*/
-
-#extBorder{
-    position: absolute;
-    top: 0px;
-    background-color: #404f70;
-    height:100vh;
-    width: 100%;
-    padding: 1px;
-    -webkit-clip-path: polygon(575px 0%, 625px 45px, 100% 45px, 100% 100%, 40px 100%, 0 -webkit-calc(100% - 45px), 0 0);
-    z-index: 1;
-}
-
-#extBorder2{
-    background-color: #05152f;
-    top: 1px;
-    left: 1px;
-    height:100vh;
-    padding: 5px;
-    -webkit-clip-path: polygon(573px 0%, 623px 45px, 100% 45px, 100% 100%, 40px 100%, 0 -webkit-calc(100% - 45px), 0 0);
-    z-index: 1;
-}
-
 
 /*===============================*/
 /*==== DataTable Fixes/Hacks ====*/
@@ -591,7 +557,8 @@ z-index: 10;
 #serverTable_wrapper{
     opacity: 0.8;
     float: left;
-    top: 55;
+    top: 190px;
+    margin-left: -10px;
     min-height: -webkit-calc(100% - 55px);
     width: -webkit-calc(100% - 260px);
     padding-left: 10px;
@@ -624,7 +591,6 @@ z-index: 10;
 .sorting{
     padding-top: 0;
     color: white !important;
-    font-family: 'BlenderPro-Medium';
     font-weight: normal !important;
     padding-left: 10px !important;
 }
@@ -636,6 +602,7 @@ z-index: 10;
 .dataTables_scroll{
     position: relative;
     top: -34px;
+    margin-bottom: -34px;
 }
 
 .dataTables_scrollBody{
@@ -651,8 +618,8 @@ z-index: 10;
 
 #serverTable_filter{
     position: relative;
-    top: -45px;
-    right: -264px;
+    top: -57px;
+    right: -224px;
     z-index: 3;
 }
 
