--- a/css/browser.css
+++ b/css/browser.css
@@ -1,44 +1,14 @@
-@font-face {
-    font-family: 'BlenderPro-Book'; 
-    src: url('../fonts/BlenderPro-Book.otf'); 
-}
-
-@font-face {
-    font-family: 'BlenderPro-BookItalic'; 
-    src: url('../fonts/BlenderPro-BookItalic.otf'); 
-}
-
-@font-face {
-    font-family: 'BlenderPro-Medium'; 
-    src: url('../fonts/BlenderPro-Medium.otf'); 
-}
-
-@font-face {
-    font-family: 'BlenderPro-Bold'; 
-    src: url('../fonts/BlenderPro-Bold.otf'); 
-}
-
-@font-face {
-    font-family: 'BlenderPro-Heavy'; 
-    src: url('../fonts/BlenderPro-Heavy.otf'); 
-}
-
-b, strong{
-    font-family: 'BlenderPro-Medium';
-    font-weight: normal;
-}
+@font-face{font-family:"Conduit ITC";src:url(../fonts/Conduit-ITC.woff);}
 
 body {
-	background-color: #05152f;
-	position: relative;
-	box-sizing: border-box;
-	margin-left: 0;
-	margin-right: 0;
-	padding: 0 15px;
-	width: calc(100% - 30px);
-	overflow-y: hidden;
-	font-family: 'BlenderPro-Book';
-	letter-spacing: 1px;
+	background-color: transparent;
+    position: relative;
+    width: -webkit-calc(100% - 30px);
+    margin-left: auto;
+    margin-right: auto;
+    overflow-y: hidden;
+    font-family: "Conduit ITC"; 
+    letter-spacing: 1px;
 }
 
 img{
@@ -47,495 +17,126 @@ img{
 
 button {
     outline: none;
+    font-family: "Conduit ITC"; 
+}
+
+#backgroundFrame {
+    position: absolute;
+    margin: 0;
+    padding: 0;
+    background-color: black;
+    left: -15px;
+    width: -webkit-calc(100% + 30px);
+    height: -webkit-calc(100% + 20px);
+    top: -10px;
+    opacity: 0.8;
+}
+
+#backgroundFrameInsert {
+    background-color: #14234a;
+    height: -webkit-calc(100% - 80px);
+    width: 100%;
+    margin-top: 40px;
 }
 
 .browserTitle{
-    font-family: 'BlenderPro-Bold';
     color: white;
     opacity: 0.8;
     position: absolute;
-    top: -8px;
-    left: 26px;
+    top: -27px;
+    left: 12px;
     z-index: 2;
+    font-size: 18pt;
 }
 
 .refresh {
-    font-family: 'BlenderPro-Medium';
     opacity: 0.8;
     position: absolute;
-    top: 10px;
-    left: 215px;
+    top: -4px;
+    left: 200px;
     color: white;
     font-size: 12pt;
     background-color: black;
     width: 95px;
-    height: 30px;
-    border-style: solid;
+    height: 28px;
+    line-height: 23px;
     border: 1px solid white;
-    z-index:1000;
+	z-index:1000;
+    border-radius: 5px;
 }
 
 .refresh:hover{
-    background-color: #31415b;
-}
-
-.quickMatch {
-    font-family: 'BlenderPro-Medium';
-    opacity: 0.8;
-    position: absolute;
-    top: 10px;
-    left: 320px;
-    color: white;
-    font-size: 12pt;
-    background-color: black;
-    width: 95px;
-    height: 30px;
-    border-style: solid;
-    border: 1px solid white;
-	z-index:1000;
-}
-
-.quickMatch:hover{
-    background-color: #31415b;
+    background-color: #B1572A;
 }
 
 .serverStats {
     color: white;
-    font-family: 'BlenderPro-Bold';
     opacity: 0.8;
     position: absolute;
-    top: 5px;
-    left: 440px;
+    top: -27px;
+    left: 350px;
     z-index: 2;
+    font-size: 14pt;
 }
 
 .closeButton {
     opacity: 0.8;
     position: absolute;
-    top: 8px;
-    right: 2px;
+    top: -4px;
+    right: -5px;
     color: white;
     font-weight: Medium;
     background-color: black;
-    width: 95px;
-    height: 30px;
+    width: 28px;
+    height: 28px;
+    line-height: 22px;
     border-style: solid;
     border: 1px solid white;
-    display: none;
+    border-radius: 5px;
+    z-index: 4;
+    font-size: 12pt;
 }
 
 .closeButton:hover{
-    background-color: #1a3d5a;
+    background-color: #B1572A;
 }
 
 .browserSwitch{
     opacity: 0.8;
     font-size: 9pt;
-    background-color: #13233d;
+    background-color: black;
     color: white;
-    border: 1px solid #404f70;
-    padding: 8px;
+    border: 1px solid white;
+    padding: 6px;
     position: absolute;
     left: 588px;
-    bottom: 4;
+    bottom: -4px;
     z-index: 3;
-    font-family: 'BlenderPro-Book';
+    border-radius: 5px;
 }
 
 .dewmenu{
-    left: 60px;
+    left: 0px;
 }
 
 .feeltrain{
-    left: -webkit-calc(100% - 440px);
+    left: 105px;
 }
 
 .browserSwitch:hover{
-    background-color: #31415b;
+    background-color: #B1572A;
 }
 
 .pingbars{
     float: left; 
     margin-right: 5px; 
-    padding-top: 1px; 
+    padding-top: 2px; 
     height: 15px; 
     width: 15px;
 }
 
 ::selection{
-  	background-color: #13233d;
-}
-
-#message{
-	background-color: purple;
-	color: white;
-	position: absolute;
-	top: 20px;
-	left: 20px;
-	width: 200px;
-	height: 50px;
-	z-index: 10;
-}
-
-.slider {
-    position: absolute;
-    right: 0;
-    width: 40%;
-    z-index: 1000000;
-    background: #404F70;
-}
-
-.ui-slider-handle {
-    left: 78.2828%;
-    position: relative;
-    display: block;
-    width: 5%;
-    padding-top: 2.5%;
-    padding-bottom: 2.5%;
-    line-height: 0;
-    background: rgb(205, 208, 213);
-}
-
-.serverPool{
-    position: absolute;
-    width: 600px;
-    height: 5px;
-    left: 25px;
-    top: 45px;
-    z-index: 10;
-}
-
-.howToServe{
-    opacity: 0.8;
-    position: absolute;
-    top: 10px;
-    left: 780px;
-    padding: 3px 10px;
-    padding-bottom: 50px;
-    background-color: #13233d;
-    border: 2px solid #404f70;
-    color: white;
-    font-size: 12pt;
-    font-family: 'BlenderPro-Medium';
-}
-
-.howToServe:hover{
-    background-color: #31415b;
-}
-
-.alertWindow, .howToServeWindow{
-    border-radius: 0;
-    background-color: #13233d !important;
-    color: white; 
-    font-family: 'BlenderPro-Book'; 
-    padding-top: 50px !important;
-    font-size: 18pt;
-    border: 2px solid #404f70;
-    outline: 0;
-    line-height: 1em;
-}
-
-.alertWindow .icon, .alertWindow .sweet-image{
-    margin-top: 10px;
-}
-
-.alertWindow .sweet-spacer, .howToServeWindow .sweet-spacer{
-    margin: 0 !important;
-    height: 20px !important;
-}
-
-.alertWindow h2, .howToServeWindow h2{
-    position: absolute;
-    width: 100%;
-    top: 0px;
-    left: 0px;
-    height: 40px;
-    line-height: 40px;
-    color: white;
-    background-color: black;
-    font-size: 18pt;
-    border-bottom: 2px solid #404f70;
-    margin-top: 0;
-    text-align: center;
-}
-
-.alertConfirm, .alertCancel, .alertWindow button {
-    border-style: solid;
-    border: 1px solid white;
-    background-color: black !important;
-    font-family: 'BlenderPro-Book'; 
-    font-size: 14pt;
-    padding: 3px 20px;
-    margin-right: 5px;
-    border-radius: 0;
-    
-}
-
-.alertConfirm:hover, .alertCancel:hover{
-    background-color: #31415b;    
-}
-
-.howToServeWindow .sweet-content{
-    text-align: left;
-}
-
-.howToServeWindow{
-    width: 1000px;
-    left: 35%;
-}
-/*==============================*/
-/*======== Friends List ========*/
-/*==============================*/
-
-.togglePartyList{
-    opacity: 0.8;
-    font-size: 12pt;
-    background-color: #13233d;
-    color: white;
-    border: 2px solid #404f70;
-    padding-top: 3px;
-    padding-bottom: 9px;
-    position: absolute;
-    left: 660px;
-    top: 10px;
-    padding-left: 50px;
-    padding-right: 20px;
-    z-index: 0;
-    font-family: 'BlenderPro-Medium';
-}
-
-.togglePartyList:hover{
-    background-color: #31415b;
-}
-
-
-.friend{
-    font-size: 14pt;
-}
-
-.friend[title="Party Leader"]{
-    color: gold;
-}
-
-.addPartyMember{
-    position: relative;
-    top: 2px;
-    right: 4px;
-    height: 24px;
-    line-height: 18px;
-    padding: 4px;
-    padding-left: 6px;
-    padding-top: 1px;
-    width: 25px;
-    background-color: #13233d;
-    color: white;
-    float: right;
-    border: 1px solid #404f70;
-}
-
-.addPartyMember:hover{
-    background-color: #404f70;
-}
-
-.toggleChat{
-    margin-right: 4px;
-    font-size: 10pt;
-    position: relative;
-    top: 2px;
-    right: 4px;
-    height: 24px;
-    line-height: 18px;
-    padding: 4px;
-    padding-top: 1px;
-    background-color: #13233d;
-    color: white;
-    float: right;
-    border: 1px solid #404f70;
-}
-
-.toggleChat:hover{
-    background-color: #404f70;
-}
-
-.addToParty{
-    position: relative;
-    top: 2px;
-    right: 0px;
-    height: 24px;
-    line-height: 18px;
-    padding: 4px;
-    padding-left: 6px;
-    padding-top: 1px;
-    width: 25px;
-    background-color: #13233d;
-    color: white;
-    float: right;
-    border: 1px solid #404f70;
-}
-
-.addToParty:hover{
-    background-color: #404f70;
-}
-
-#partyBorder{
-    display: none;
-    position: absolute;
-    top: 100px;
-    left: 100px;
-    background-color: #404f70;
-    width: 300px;
-    height: 400px;
-    -webkit-clip-path: polygon(30px 0, 100% 0, 100% 100%, 100% 100%, 0 100%, 0 30px);
-    padding-bottom: 4px;
-    z-index: 100;
-}
-
-#partyHeader{
-    font-family: 'BlenderPro-Bold';
-    position: relative;
-    top: 2px;
-    left: 4px;
-    width: 293px;
-    text-align: center;
-    background-color: black;
-    color: white;
-    -webkit-clip-path: polygon(28px 0, 100% 0, 100% 100%, 100% 100%, 0 100%, 0 28px);
-    z-index: 100;
-    height: 28px;
-    line-height: 28px;
-    font-size: 16pt;
-    padding-left: 50px;
-}
-
-#party{
-    position: absolute;
-    top: 33px;
-    left: 3px;
-    width: 294px;
-    height: 364px;
-    z-index: 100;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: #13233d;
-    color: white;
-    padding:6px;
-    padding-left: 10px;
-    padding-right: 4px;
-}
-
-#allOnline{
-    display:none;
-    position: absolute;
-    top: 33px;
-    left: 3px;
-    width: 294px;
-    height: 364px;
-    z-index: 100;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: black;
-    color: white;
-    padding:6px;
-    padding-left: 10px;
-    padding-right: 4px;
-    overflow-y: auto;
-}
-
-#statusLine{
-    color: grey;
-    font-family: 'BlenderPro-BookItalic';
-}
-
-/*===============================*/
-/*========= Chat Window =========*/
-/*===============================*/
-
-.closeChat{
-    position: relative;
-    top: 2px;
-    right: 4px;
-    height: 24px;
-    line-height: 18px;
-    padding: 4px;
-    text-align: center;
-    width: 24px;
-    padding-top: 2px;
-    padding-left: 6px;
-    background-color: #13233d;
-    color: white;
-    float: right;
-    border: 1px solid #404f70;
-    font-size: 11pt;
-}
-
-.closeChat:hover{
-    background-color: #404f70;
-}
-
-#chatBorder{
-    display: none;
-    position: absolute;
-    top: 100px;
-    left: 600px;
-    background-color: #404f70;
-    width: 400px;
-    height: 400px;
-    -webkit-clip-path: polygon(30px 0, 100% 0, 100% 100%, 100% 100%, 0 100%, 0 30px);
-    padding-bottom: 4px;
-    z-index: 100;
-}
-
-#chatHeader{
-    font-family: 'BlenderPro-Bold';
-    position: relative;
-    top: 2px;
-    left: 4px;
-    width: 393px;
-    text-align: center;
-    background-color: black;
-    color: white;
-    -webkit-clip-path: polygon(28px 0, 100% 0, 100% 100%, 100% 100%, 0 100%, 0 28px);
-    z-index: 100;
-    height: 28px;
-    line-height: 28px;
-    font-size: 16pt;
-    padding-left: 10px;
-}
-
-#chat{
-    position: relative;
-    top: 5px;
-    left: 0px;
-    width: 394px;
-    height: 334px;
-    z-index: 100;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: #13233d;
-    color: white;
-    padding:6px;
-    padding-left: 10px;
-    padding-right: 4px;
-    overflow-y: auto;
-}
-
-#messageBox{
-    margin-top: 8px;
-    margin-left: 3px;
-    width: 338px;
-    padding-left: 10px;
-}
-
-#submitButton{
-    background-color: black;
-    color: white;
-    border: 1px solid white;
-    height: 26px;
-    width: 52px;
-}
-
-#submitButton:hover{
-    background-color: #31415b;
+  background-color: #13233d;
 }
 
 /*==============================*/
@@ -543,75 +144,68 @@ button {
 /*==============================*/
 
 .controllerButton{
-    opacity: 0;
-    margin-top: -3;
-    margin-left: 5;
-    height: 28;
-    width: 28;
-    display: none;
+    position: relative;
+    top: 10px;
+    height: 30px;
+    width: 30px;
+    margin-left: 10px;
 }
 
-.selected .controllerButton{
-    opacity: 1;
+#xboxLabel{
+    position: absolute;
+    left: 10px;
+    bottom: 2px;
+    z-index: 1000;
+    color: white;
 }
-
-.refresh .controllerButton{
-    opacity: 1;
-}
-
-.closeButton .controllerButton{
-    opacity: 1;
-}
-
 /*==============================*/
 /*======= Game Info Card =======*/
 /*==============================*/
 
 #gamecard{
     opacity: 0.9;
-    width: 250px;
-    position: relative;
-    top: 2px;
-    right: -15px;
+    width: 254px;
+    position: absolute;
+    top: -15px;
+    right: 2px;
     float: right;
     z-index: 2;
     margin-top: 54px;
-    margin-right: 10px;
+    margin-right: -10px;
 }
 
 #cardheader{
     position: relative;
     top: 2px;
     left: 2px;
-    width: 246px;
-    min-height: 139px;
-    background-color: #13233d;
+    width: 235px;
+    min-height: 137px;
+    background-color: #608085;
     -webkit-clip-path: polygon(30px 0, 100% 0, 100% 100%, 100% 100%, 0 100%, 0 30px);
 }
 
 #cardheaderborder{
-    background-color: #404f70;
+    background-color: #608085;
     width: 250px;
-    min-height: 143px;
+    min-height: 140px;
     -webkit-clip-path: polygon(30px 0, 100% 0, 100% 100%, 100% 100%, 0 100%, 0 30px);
     padding-bottom: 4px;
 }
 
 #title{
-    font-family: 'BlenderPro-Medium';
     position: relative;
     margin-top: 2px;
-    min-height: 30px;
+    min-height: 21px;
     text-align: center;
     padding-left: 10px;
     padding-right: 10px;
     padding-top: 4px;
     padding-bottom: 4px;
     line-height: 20px;
-    width: 246px;
+    width: 226px;
     background-color: black;
     color: white;
-    border-bottom: 2px solid #404f70;
+    border-bottom: 2px solid #608085;
 }
 
 #mappic{
@@ -627,10 +221,10 @@ button {
 
 #scoreboard{
     margin-top: 5px;
-    width: 250px;
+    width: 247px;
     line-height: 30px;
     text-align: center;
-    border: 2px solid #404f70;
+    border: 2px solid #608085;
     background-color: #13233d;
     color: white; 
 }
@@ -659,7 +253,7 @@ button {
 
 #gameinfoborder{
     margin-top: -2px;
-    background-color: #404f70;
+    background-color: #608085;
     width: 251px;
     padding-bottom: 4px;
     -webkit-clip-path: polygon(0 0, 100% 0, 100% -webkit-calc(100% - 30px), -webkit-calc(100% - 30px) 100%, 0 100%, 0 0);
@@ -669,7 +263,7 @@ button {
     position: relative;
     top: 2px;
     left: 2px;
-    width: 247px;
+    width: 243px;
     margin-top: 6px;
     padding-left: 4px;
     line-height: 20px;
@@ -679,32 +273,6 @@ button {
     word-wrap:break-word;
     -webkit-clip-path: polygon(0 0, 100% 0, 100% -webkit-calc(100% - 30px), -webkit-calc(100% - 30px) 100%, 0 100%, 0 0);
 }
-
-/*=============================*/
-/*======= Outter border =======*/
-/*=============================*/
-
-#extBorder{
-    position: absolute;
-    top: 0px;
-    background-color: #404f70;
-    height:100vh;
-    width: 100%;
-    padding: 1px;
-    -webkit-clip-path: polygon(645px 0%, 695px 45px, 100% 45px, 100% 100%, 40px 100%, 0 -webkit-calc(100% - 45px), 0 0);
-    z-index: 1;
-}
-
-#extBorder2{
-    background-color: #05152f;
-    top: 1px;
-    left: 1px;
-    height:100vh;
-    padding: 5px;
-    -webkit-clip-path: polygon(643px 0%, 693px 45px, 100% 45px, 100% 100%, 40px 100%, 0 -webkit-calc(100% - 45px), 0 0);
-    z-index: 1;
-}
-
 
 /*===============================*/
 /*==== DataTable Fixes/Hacks ====*/
@@ -719,7 +287,8 @@ button {
 #serverTable_wrapper{
     opacity: 0.8;
     float: left;
-    top: 55;
+    top: 47px;
+    margin-left: -10px;
     min-height: -webkit-calc(100% - 55px);
     width: -webkit-calc(100% - 260px);
     padding-left: 10px;
@@ -733,6 +302,7 @@ button {
     background-color: #13233d;
     color: white;
     border: 1px solid #05152f;
+    padding: 8px;
 }
 
 #serverTable tbody tr{
@@ -740,21 +310,26 @@ button {
 }
 
 .selected td{
-    background-color: #31415b !important;
+    background: -webkit-linear-gradient(left, #B1572A 0%, rgba(199, 109, 41, 0.85) 95%);
+    background-attachment:fixed;
     color: white !important;
 }
 
 .sorting_asc, .sorting_desc {
-    background-color: white;
+    background-color: #608085;
     color: #13233d;
 }
 
 .sorting{
     padding-top: 0;
     color: white !important;
-    font-family: 'BlenderPro-Medium';
     font-weight: normal !important;
     padding-left: 10px !important;
+}
+
+.sorting:hover{
+    background-color: #B1572A;
+	color: white;
 }
 
 .dataTable thead th, .dataTable thead td {
@@ -764,23 +339,26 @@ button {
 .dataTables_scroll{
     position: relative;
     top: -34px;
+    margin-bottom: -34px;
 }
 
 .dataTables_scrollBody{
     padding-top: 29px;
     margin-bottom: -38px;
+    border-bottom: 0 !important;
 }
 
 #serverTable tbody tr:hover td{
-    background-color: #31415b;
+    background: -webkit-linear-gradient(left, #B1572A 0%, rgba(199, 109, 41, 0.85) 95%);
+    background-attachment:fixed;
 	color: white;
     cursor: pointer;
 }
 
 #serverTable_filter{
     position: relative;
-    top: -45px;
-    right: -264px;
+    top: -47px;
+    right: -224px;
     z-index: 3;
 }
 
@@ -829,12 +407,9 @@ button {
 }
  
 ::-webkit-scrollbar-track {
-    background-color: #05152F;
+    background-color: transparent;
 }
  
 ::-webkit-scrollbar-thumb {
-    background-color: #344362;
-    border: 3px solid #05152F;
-    border-left-width: 7px;
-    border-right-width: 0px;
+    background-color: #608085;
 }
