Adjust table with zoom

--- a/css/browser.css
+++ b/css/browser.css
@@ -96,7 +96,7 @@ button {
 }
 
 .quickMatch:hover{
-    background-color: #31415b;
+    background-color: #B1572A;
 }
 
 
@@ -187,7 +187,7 @@ button {
 }
 
 .howToServe:hover{
-    background-color: #31415b;
+    background-color: #B1572A;
 }
 
 .alertWindow, .howToServeWindow{
