--- a/css/browser.css
+++ b/css/browser.css
@@ -200,11 +200,12 @@ button {
     border: 2px solid #404f70;
     outline: 0;
     line-height: 1em;
+    margin-bottom: -200px;
 }
 
 .alertWindow p, .howToServeWindow p{
     color: white !important; 
-    font-size: 14pt;    
+    font-size: 16pt;    
 }
 
 .alertWindow .icon, .alertWindow .sweet-image{
@@ -225,7 +226,7 @@ button {
     line-height: 40px;
     color: white;
     background-color: black;
-    font-size: 14pt;
+    font-size: 16pt;
     border-bottom: 2px solid #404f70;
     margin-top: 0;
     text-align: center;
@@ -270,21 +271,19 @@ button {
     right: 0;
     bottom: 5px;
     width: 30%;
-    height: 2%;
-    z-index: 1000000;
+    height: 10px;
+    z-index: 10;
     background: #404F70;
 }
 
 .ui-slider-handle {
-    left: 78.2828%;
     position: relative;
     display: block;
-    width: 8%;
-    padding-top: 2.5%;
-    padding-bottom: 2.5%;
+    width: 25px;
+    padding: 10px;
     line-height: 0;
     background: rgb(205, 208, 213);
-    margin-top: -0.5%;
+    margin-top: -5px;
     text-align: center;
 }
 
@@ -318,7 +317,7 @@ button {
     top: -15px;
     right: 2px;
     float: right;
-    z-index: 2;
+    z-index: 11;
     margin-top: 54px;
     margin-right: -10px;
 }
@@ -378,12 +377,17 @@ button {
     color: white; 
 }
 
+#scoreBoardHeader{
+    cursor: pointer;
+}
+
 .statBreakdown{
     font-size: 10pt;
     line-height: 20px;
     color: white;
-    width: 245px;
+    width: 246px;
     border-collapse: collapse;
+    display: none;
 }
 
 .statBreakdown td{
