--- a/css/browser.css
+++ b/css/browser.css
@@ -176,7 +176,7 @@ img{
     top: 10%;
     height: 25px;
     width: 25px;
-    font-size: 2.7vh;
+    font-size: 13pt;
     line-height: 25px;
 }
 
