--- a/css/browser.css
+++ b/css/browser.css
@@ -625,6 +625,10 @@ button {
     height: 80px;
 }
 
+#scoreBoardHeader{
+    cursor: pointer;
+}
+
 #scoreboard{
     margin-top: 5px;
     width: 250px;
@@ -641,6 +645,7 @@ button {
     color: white;
     width: 245px;
     border-collapse: collapse;
+    display: none;
 }
 
 .statBreakdown td{
