--- a/css/browser.css
+++ b/css/browser.css
@@ -354,7 +354,6 @@ img{
     position: relative;
     top: 2px;
     left: 2px;
-    width: 235px;
     min-height: 137px;
     background-color: #608085;
     -webkit-clip-path: polygon(30px 0, 100% 0, 100% 100%, 100% 100%, 0 100%, 0 30px);
@@ -468,7 +467,7 @@ img{
 #serverTable_wrapper{
     opacity: 0.8;
     float: left;
-    top: 47px;
+    top: 37px;
     margin-left: -10px;
     min-height: -webkit-calc(100% - 55px);
     width: -webkit-calc(100% - 260px);
@@ -583,6 +582,10 @@ img{
     width: -webkit-calc(100% - 10px);
     margin-bottom: 0;
     background-color: #05152f;
+}
+
+.dataTables_scrollHead{
+    padding-top: 10px;
 }
 
 ::-webkit-scrollbar {
